# mycms

./: .codespell-ignore-words  .gitignore  ChangeLog  INSTALL.md  Makefile.am  README.md  conf-dev.sh  configure.ac  package.info.in  wsl-fixup-libtool-argv0.patch  wsl-fixup-wsl1-skip-env.patch
.github/workflows/: build.yaml  codespell.yaml
include/: Makefile.am
include/mycms/: Makefile.am  mycms-blob.h  mycms-certificate-driver-file.h  mycms-certificate-driver-pkcs11.h  mycms-certificate.h  mycms-context.h  mycms-dict.h  mycms-error.h  mycms-io.h  mycms-list-str.h  mycms-list.h  mycms-static.h  mycms-system-driver-core.h  mycms-system.h  mycms-util-getpass.h  mycms-variant.h  mycms.h
packaging/: Makefile.am
packaging/debian/: .gitignore  Makefile.am  changelog  control  copyright  gbp.conf  libmycms-dev.dirs  libmycms-dev.install  libmycms1.symbols  mycms.install  not-installed  rules  watch
packaging/debian/upstream/: metadata
packaging/windows-nsis/: Makefile.am  build  mycms.nsi
src/: Makefile.am
src/libmycms/: Makefile.am  libmycms.pc.in  mycms-certificate-driver-file.c  mycms-certificate-driver-file.exports  mycms-certificate-driver-pkcs11.c  mycms-certificate-driver-pkcs11.exports  mycms-certificate-private.h  mycms-certificate.c  mycms-certificate.exports  mycms-context-internal.h  mycms-context.c  mycms-context.exports  mycms-core-decrypt.c  mycms-core-decrypt.exports  mycms-core-encrypt.c  mycms-core-encrypt.exports  mycms-core-sign.c  mycms-core-sign.exports  mycms-core-verify.c  mycms-core-verify.exports  mycms-dict.c  mycms-dict.exports  mycms-error-internal.h  mycms-error.c  mycms-error.exports  mycms-internal.h  mycms-io-private.h  mycms-io.c  mycms-io.exports  mycms-list-str.c  mycms-list-str.exports  mycms-openssl.c  mycms-openssl.h  mycms-static.c  mycms-static.exports  mycms-system.c  mycms-system.exports  mycms-util.c  mycms-util.h  mycms.c  (+2 more)
src/libmycms-util/: Makefile.am  libmycms-util.pc.in  mycms-util-getpass.c  mycms-util-getpass.exports  mycms-util-pinentry.c  mycms-util-pinentry.h  versioninfo.rc.in
src/mycms-tool/: Makefile.am  cmd-common.c  cmd-common.h  cmd-decrypt.c  cmd-decrypt.h  cmd-encrypt.c  cmd-encrypt.h  cmd-sign.c  cmd-sign.h  cmd-verify.c  cmd-verify.h  getoptutil.c  getoptutil.h  main.c  util.c  util.h  versioninfo.rc.in
test/: Makefile.am
test/ca/: Makefile.am  issue.sh  oids.cnf  rootca.vars.in  subca.vars.in  vars.in
test/ca/x509-types/: encrypt  sign
test/mycms-tool/: Makefile.am
test/mycms-tool/encrypt/: Makefile.am  softhsm2.conf.in  test-file.sh  test-pkcs11.sh  test-pkcs11.valgrind.supp
test/mycms-tool/sign/: Makefile.am  test-file.sh  test-pkcs11.sh
test/mycms-tool/windows/: Makefile.am  test-file.bat
