MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in \
	$(NULL)

mycmsinclude_HEADERS = \
	mycms-blob.h \
	mycms-certificate-driver-file.h \
	mycms-certificate-driver-pkcs11.h \
	mycms-certificate.h \
	mycms-context.h \
	mycms-dict.h \
	mycms-error.h \
	mycms-io.h \
	mycms-list.h \
	mycms-list-str.h \
	mycms-static.h \
	mycms-system-driver-core.h \
	mycms-system.h \
	mycms-util-getpass.h \
	mycms-variant.h \
	mycms.h \
	$(NULL)
